IP Address updated for dokcer server

--- a/prog1.html
+++ b/prog1.html
@@ -58,7 +58,7 @@ body, html {
 <body>
 <center>
 <h2></h2>
-<form action="http://192.168.1.209/cgi-bin/fcs.py" class="container">
+<form action="https://172.20.244.40/cgi-bin/fcs.py" class="container">
 <h3>Enter Your Command:<input type="text" placeholder="Enter here" name="c">
 <br>
 <button type="submit" class="btn">Submit</button>
